Bug 349666 - Changing the anchor point using the Tool Options Docker when using "Transform a layer or selection" tool fails to change origin.
Summary: Changing the anchor point using the Tool Options Docker when using "Transform...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 2.9.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-27 18:31 UTC by Ryan Leach
Modified: 2016-09-29 17:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Start (313.82 KB, image/jpeg)
2015-06-27 18:35 UTC, Ryan Leach
Details
Expected (328.47 KB, image/jpeg)
2015-06-27 18:35 UTC, Ryan Leach
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Leach 2015-06-27 18:31:36 UTC
Using the 9 square anchor buttons fails to change the origin used for the Position textbox, however the decorations change on the canvas.

Reproducible: Always

Steps to Reproduce:
Paste in an image from the internet.
Attempt to transform the image using the tool.
Pick an origin other then the centre point, either using the mouse or the 9 button quick select.
change the position XY textboxes.
Observe that nothing changes.

Actual Results:  
The origin decoration appears to change, but doesn't have any affect on the outcome.

Expected Results:  
I expect that the pasted image would be transformed or positioned around the moved origin point.
Comment 1 Ryan Leach 2015-06-27 18:35:18 UTC
Created attachment 93371 [details]
Start
Comment 2 Ryan Leach 2015-06-27 18:35:51 UTC
Created attachment 93372 [details]
Expected
Comment 3 Victor Wåhlström 2015-06-27 18:45:16 UTC
Verified. I would either expect the results of the second screenshot, or for it to change values so coordinates are updated without the decoration moving.
Comment 4 Ryan Leach 2015-06-27 19:27:00 UTC
Also affects 2.9.5 but I can't select it in the version dropdown.
Comment 5 Ryan Leach 2015-06-27 19:28:21 UTC
(In reply to Victor Wåhlström from comment #3)
> Verified. I would either expect the results of the second screenshot, or for
> it to change values so coordinates are updated without the decoration moving.

I'd expect the coordinates to be updated, but setting the co-ordinates to 0 after the coordinates are updated should result in the screenshot right?
Comment 6 animtim 2016-05-10 09:24:23 UTC
I can confirm on linux too, those anchor buttons are broken.
Comment 7 Halla Rempt 2016-05-11 06:13:58 UTC
Okay, this is a clear regression. Let's ask Dmitry to put it on his unbreak-now list.
Comment 8 Dmitry Kazakov 2016-09-29 17:18:47 UTC
Git commit bfe18d2ef177b77beab669fb574ba39997ad021a by Dmitry Kazakov.
Committed on 29/09/2016 at 17:18.
Pushed by dkazakov into branch 'kazakov/scale-from-pivot-point-T119'.

Fix translation transform handle the anchor points!

Ref T119
Fixes T2475

M  +25   -8    plugins/tools/tool_transform2/kis_tool_transform_config_widget.cpp

http://commits.kde.org/krita/bfe18d2ef177b77beab669fb574ba39997ad021a
Comment 9 Dmitry Kazakov 2016-09-29 17:24:20 UTC
Git commit 4e30027503205b7898c2377861d15edde183c3d6 by Dmitry Kazakov.
Committed on 29/09/2016 at 17:24.
Pushed by dkazakov into branch 'master'.

Fix translation transform handle the anchor points!

Ref T119
Fixes T2475

M  +27   -8    plugins/tools/tool_transform2/kis_tool_transform_config_widget.cpp

http://commits.kde.org/krita/4e30027503205b7898c2377861d15edde183c3d6