Fix translation transform handle the anchor points!

Ref T119
Fixes T2475
BUG:349666